BitcoinCore Change Log
======================

Version 3.1.0
  - Fee filter support (BIP 133)
  - Use AESEngine instead of AESFastEngine (CVE-2016-1000339)
  

Version 3.0.0
  - SendHeaders message support (BIP 130)
  - Segregated Witness support (BIP 141, BIP 143, BIP 144)
  - Compact block support (BIP 152)
  - Block soft fork support (BIP 9)
  - Reduce bloom filter size by specifying UPDATE_NONE
  - Soft fork consensus support (BIP 68)
  - OP_CHECKLOCKTIMEVERIFY support (BIP 65)
  - OP_CHECKSEQUENCEVERIFY support (BIP 112)
  - Hierarchical Deterministic key support (BIP 32)


Version 2.1.2
  - Increase 'addr' message size to 1000 entries


Version 2.1.1

  - Remove transaction signature count restriction
  - Support Version 3 blocks (transaction version is still 1)
