@@ -4,6 +4,7 @@ BitcoinCore Change Log
 Version 3.1.0
   - Fee filter support (BIP 133)
   - Use AESEngine instead of AESFastEngine (CVE-2016-1000339)
+  - Bitcoin Cash support
   
 
 Version 3.0.0
